--- a/grvc-ual/uav_abstraction_layer/CMakeLists.txt
+++ b/grvc-ual/uav_abstraction_layer/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
   gazebo_msgs
   sensor_msgs
+  gridBenchmark
 )
 
 ## System dependencies are found with CMake's conventions
@@ -129,8 +130,8 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES uav_abstraction_layer
-  CATKIN_DEPENDS message_runtime argument_parser geometry_msgs mavros mavros_msgs roscpp std_msgs tf2_ros gazebo_msgs sensor_msgs
+  LIBRARIES uav_abstraction_layer gridBenchmark
+  CATKIN_DEPENDS message_runtime argument_parser geometry_msgs mavros mavros_msgs roscpp std_msgs tf2_ros gazebo_msgs sensor_msgs 
 #  DEPENDS system_lib
 )
 
@@ -140,6 +141,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
+include_directories("../gridBenchmark/include/")
 include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
@@ -150,7 +152,7 @@ include_directories(
 #   src/${PROJECT_NAME}/uav_abstraction_layer.cpp
 # )
 add_library(${PROJECT_NAME}
-  src/backend.cpp src/backend_mavros.cpp src/backend_light.cpp src/ual.cpp
+  src/backend.cpp src/backend_mavros.cpp src/backend_light.cpp src/ual.cpp src/frontier_node.cpp
 )
 
 ## Add cmake target dependencies of the library
@@ -177,6 +179,7 @@ add_executable(frontier_node src/frontier_node.cpp)
 ## same as for the library above
 add_dependencies(test_ual_interfaces ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(frontier_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} gridBenchmark)
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
@@ -197,6 +200,7 @@ target_link_libraries(server
 target_link_libraries(frontier_node
   ${PROJECT_NAME}
   ${catkin_LIBRARIES}
+  gridBenchmark
 )
 
 #############
