[msg] Adding message generation StartGoal

--- a/path_planning/package.xml
+++ b/path_planning/package.xml
@@ -13,4 +13,7 @@
   <depend>octomap_msgs</depend>
   <depend>octomap_ros</depend>
 
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+
 </package>
