--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -4,8 +4,35 @@ project(path_planning)
 add_definitions(-std=c++11 )
 set(CMAKE_BUILD_TYPE Debug)
 
-find_package(catkin REQUIRED COMPONENTS roscpp octomap_msgs octomap_ros)
+find_package(catkin REQUIRED COMPONENTS roscpp octomap_msgs octomap_ros 
+   std_msgs
+   message_generation)
 
+# Generate messages in the 'msg' folder
+add_message_files(
+  FILES
+  StartGoal.msg
+)
+
+## Generate services in the 'srv' folder
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
+
+## Generate actions in the 'action' folder
+# add_action_files(
+#   FILES
+#   Action1.action
+#   Action2.action
+# )
+
+# Generate added messages and services with any dependencies listed here
+generate_messages(
+  DEPENDENCIES
+  std_msgs  # Or other packages containing msgs
+)
 
 ###################################
 ## catkin specific configuration ##
@@ -13,7 +40,7 @@ find_package(catkin REQUIRED COMPONENTS roscpp octomap_msgs octomap_ros)
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES thrun
-  CATKIN_DEPENDS roscpp  octomap_msgs octomap_ros 
+  CATKIN_DEPENDS roscpp  octomap_msgs octomap_ros message_runtime
 #  DEPENDS system_lib
 )
 
