[frontiers_msgs] Updating message parameters. Exporting to be used in other packages.

--- a/frontiers_msgs/CMakeLists.txt
+++ b/frontiers_msgs/CMakeLists.txt
@@ -29,10 +29,10 @@ catkin_simple(ALL_DEPS_REQUIRED)
 # cs_add_executable(my_exec src/main.cpp)
 # target_link_libraries(my_exec my_lib)
 
-# cs_install()
+cs_install()
 # cs_install_scripts(scripts/my_script.py)
 
-# cs_export()
+cs_export()
 
 #############
 ## Testing ##
