--- a/frontiers/package.xml
+++ b/frontiers/package.xml
@@ -34,6 +34,8 @@
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
     <depend>roscpp</depend>
     <depend>frontiers_msgs</depend>
+    <depend>octomap_msgs</depend>
+    <depend>octomap_ros</depend>
     <build_depend>catkin_simple</build_depend> 
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
@@ -47,7 +49,8 @@
   <!-- Use exec_depend for packages you need at runtime: -->
   <!--   <exec_depend>message_runtime</exec_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
+    <test_depend>gtest</test_depend>
+    <!-- <test_depend>frontiers_msgs</test_depend> -->
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
