[path_planning] Adding missing dependencies to package.xml

--- a/path_planning/package.xml
+++ b/path_planning/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>path_planning</name>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
   <description>A package for path planners on octree</description>
 
-  <maintainer email="margaridaCostaFaria@gmail.com">mfaria</maintainer>
+  <maintainer email="margaridaCostaFaria@gmail.com">Margarida Faria</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -12,6 +12,7 @@
   <depend>roscpp</depend>
   <depend>octomap_msgs</depend>
   <depend>octomap_ros</depend>
+  <depend>std_msgs</depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
