[frontiers] Test failing with seg fault.

--- a/frontiers/package.xml
+++ b/frontiers/package.xml
@@ -34,6 +34,7 @@
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
     <depend>roscpp</depend>
     <depend>frontiers_msgs</depend>
+    <depend>path_planning</depend>
     <depend>octomap_msgs</depend>
     <depend>octomap_ros</depend>
     <build_depend>catkin_simple</build_depend> 
