[architecture] Creating service provider.

--- a/architecture/package.xml
+++ b/architecture/package.xml
@@ -18,5 +18,6 @@
   <depend>std_msgs</depend>
   <depend>architecture_msgs</depend>
   <depend>octomap_msgs</depend>
+  <depend>nav_msgs</depend>
 
 </package>
