--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -27,14 +27,10 @@ catkin_simple(ALL_DEPS_REQUIRED)
 ########### 
 ## Build ##
 ###########
-cs_add_library(neighbors src/neighbors.cpp)
 cs_add_library(ltStar_lib src/ltStar_lib.cpp)
 
-# cs_add_executable(ltStar_dispatcher_node src/ltStar_dispatcher_node.cpp )
-# target_link_libraries(ltStar_dispatcher_node  ${catkin_LIBRARIES} ${neighbors_LIBRARIES} neighbors)
-
 cs_add_executable(ltStar_async_node src/ltStar_async_node.cpp )
-target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib neighbors)
+target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib)
 
 cs_install()
 
@@ -70,33 +66,28 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(workInProgress ${catkin_LIBRARIES} )
 
-  ## Octree @ depth and size ##depthSizeTest
-  catkin_add_gtest(depthSizeTest 
-    test/depth_voxelSide_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(depthSizeTest ${catkin_LIBRARIES} neighbors)
+  # ## Octree @ depth and size ##depthSizeTest
+  # catkin_add_gtest(depthSizeTest 
+  #   test/depth_voxelSide_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(depthSizeTest ${catkin_LIBRARIES} )
 
-  ## Octree @ neighbors ##
-  catkin_add_gtest(neighborTests 
-    test/neighbor_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(neighborTests ${catkin_LIBRARIES} neighbors)
 
-  ## Lazy Theta Star @ open ##
-  catkin_add_gtest(openTests 
-    test/open_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(openTests ${catkin_LIBRARIES} )
+  # ## Lazy Theta Star @ open ##
+  # catkin_add_gtest(openTests 
+  #   test/open_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(openTests ${catkin_LIBRARIES} )
 
   # Lazy Theta Star ##
   catkin_add_gtest(ltstarTests 
     test/lazyTheta_tests.cpp
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTests ${catkin_LIBRARIES} neighbors)
-  catkin_add_gtest(ltstarTestsFixture 
-    test/lazyTheta_tests_Fixture.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} neighbors)
+  target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
+  # catkin_add_gtest(ltstarTestsFixture 
+  #   test/lazyTheta_tests_Fixture.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} )
 
 endif()
 
