--- a/path_planning/package.xml
+++ b/path_planning/package.xml
@@ -15,6 +15,7 @@
   <depend>octomap_ros</depend>
   <depend>std_msgs</depend>
   <depend>path_planning_msgs</depend>
+  <depend>frontiers</depend>
 
   <!-- <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend> -->
