--- a/architecture/package.xml
+++ b/architecture/package.xml
@@ -21,5 +21,6 @@
   <depend>path_planning_msgs</depend>
   <depend>frontiers</depend>
   <depend>frontiers_msgs</depend>
+  <depend>tf</depend>
 
 </package>
