--- a/architecture/package.xml
+++ b/architecture/package.xml
@@ -22,6 +22,7 @@
   <depend>frontiers</depend>
   <depend>frontiers_msgs</depend>
   <depend>laser_free_to_cloud</depend>
+  <depend>octomap_server</depend>
   <depend>tf</depend>
 
 </package>
