--- a/architecture/cfg/exploration_params.yaml
+++ b/architecture/cfg/exploration_params.yaml
@@ -1,8 +1,9 @@
 exploration_maneuver_duration_secs: 11
 exploration_maneuver_phases_duration_secs: 5
 px4_loiter_radius: 0.5
+px4/flight_speed: 3
 odometry_error: 0 
-safety_margin: 1.5
+safety_margin: 4
 
 geofence_min/x: -10
 geofence_min/y: -10
