[rviz] Passing publishing methods to rviz package. Fix colors to waypoints always be seen.

--- a/path_planning/package.xml
+++ b/path_planning/package.xml
@@ -16,6 +16,7 @@
   <depend>std_msgs</depend>
   <depend>path_planning_msgs</depend>
   <depend>frontiers</depend>
+  <depend>rviz_interface</depend>
 
   <!-- <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend> -->
