--- a/architecture/cfg/exploration_params.yaml
+++ b/architecture/cfg/exploration_params.yaml
@@ -3,7 +3,7 @@ exploration_maneuver_phases_duration_secs: 5
 px4_loiter_radius: 0.5
 px4/flight_speed: 3
 odometry_error: 0 
-safety_margin: 3
+frontier/safety_margin: 3
 
 geofence_min/x: -15
 geofence_min/y: -20
@@ -14,4 +14,5 @@ geofence_max/y: 20
 geofence_max/z: 4
 
 path/max_search_iterations: 500
-path/max_cycles_waited_for_path: 3
+path/max_cycles_waited_for_path: 50
+path/safety_margin: 1
