--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -32,6 +32,9 @@ cs_add_library(ltStar_lib src/ltStar_lib.cpp)
 cs_add_executable(ltStar_async_node src/ltStar_async_node.cpp )
 target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib)
 
+cs_add_executable(ltStar_debug_node src/ltStar_async_node.cpp )
+target_link_libraries(ltStar_debug_node  ${catkin_LIBRARIES} ltStar_lib)
+
 cs_install()
 
 cs_export()
@@ -60,11 +63,11 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(collectResults ${catkin_LIBRARIES} )
 
-  # ## Octree @ work in progress ##
-  # catkin_add_gtest(workInProgress 
-  #   test/work_in_progress_test.cpp
-  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
+  ## Octree @ work in progress ##
+  catkin_add_gtest(workInProgress 
+    test/work_in_progress_test.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
 
   # ## Octree @ depth and size ##depthSizeTest
   # catkin_add_gtest(depthSizeTest 
@@ -73,21 +76,21 @@ if (CATKIN_ENABLE_TESTING)
   # target_link_libraries(depthSizeTest ${catkin_LIBRARIES} )
 
 
-  ## Lazy Theta Star @ open ##
-  catkin_add_gtest(openTests 
-    test/open_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(openTests ${catkin_LIBRARIES} )
+  # ## Lazy Theta Star @ open ##
+  # catkin_add_gtest(openTests 
+  #   test/open_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(openTests ${catkin_LIBRARIES} )
 
-  # Lazy Theta Star ##
-  catkin_add_gtest(ltstarTests 
-    test/lazyTheta_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
-  catkin_add_gtest(ltstarTestsFixture 
-    test/lazyTheta_tests_Fixture.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} ltStar_lib)
+  # # Lazy Theta Star ##
+  # catkin_add_gtest(ltstarTests 
+  #   test/lazyTheta_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
+  # catkin_add_gtest(ltstarTestsFixture 
+  #   test/lazyTheta_tests_Fixture.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} ltStar_lib)
 
 endif()
 
