--- a/frontiers/CMakeLists.txt
+++ b/frontiers/CMakeLists.txt
@@ -60,7 +60,7 @@ if(CATKIN_ENABLE_TESTING)
   # catkin_add_gtest(neighborTests 
   #   test/neighbor_tests.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(neighborTests ${catkin_LIBRARIES} )
+  # target_link_libraries(neighborTests ${catkin_LIBRARIES} frontiers_lib neighbors)
   # catkin_add_gtest(frontiers_tests 
   #   test/frontier_lib_tests.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
