[architecture] [frontier] Now the xy distance to what is whithin reach is calculated according to sensor angle and range. The frontier generation checks if the frontier can be sensed from the center of the frontier voxel, if this is not the case the generated frontier is adjusted to the sensing range. The end goal is added to the pass, instead of going just until the center of containing voxel.

--- a/architecture/cfg/exploration_params.yaml
+++ b/architecture/cfg/exploration_params.yaml
@@ -2,7 +2,8 @@ exploration_maneuver_duration_secs: 11
 exploration_maneuver_phases_duration_secs: 5
 px4_loiter_radius: 0.5
 px4/flight_speed: 3
-laser_max_range: 10
+laser_range: 6
+laser_angle: 0.872665
 
 odometry_error: 0
 
