--- a/architecture/cfg/realUav_params.yaml
+++ b/architecture/cfg/realUav_params.yaml
@@ -7,17 +7,19 @@ laser_angle: 1.0472
 
 odometry_error: 0
 
-frontier/safety_margin: 0.5
+frontier/safety_margin: 3
 
-geofence_min/x: -15
-geofence_min/y: -20
-geofence_min/z: 1
-geofence_max/x: 12
-geofence_max/y: 20
-geofence_max/z: 14
+geofence_min/x: -5
+geofence_min/y: -5
+geofence_min/z: 2
+geofence_max/x: 5
+geofence_max/y: 5
+geofence_max/z: 5
 
-path/max_search_iterations: 5000
+path/max_search_iterations: 180
 path/max_cycles_waited_for_path: 50
-path/safety_margin: 0.5
+path/safety_margin: 2
 
 current_position_topic: "/mavros/local_position/pose"
+
+hokuyo_topic: "scan"
