--- a/lazy_theta_star/CMakeLists.txt
+++ b/lazy_theta_star/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(path_planning)
+project(lazy_theta_star)
 
 add_definitions(-std=c++11 )
 set(CMAKE_BUILD_TYPE Debug)
