--- a/architecture/cfg/exploration_params.yaml
+++ b/architecture/cfg/exploration_params.yaml
@@ -21,3 +21,5 @@ path/max_cycles_waited_for_path: 50
 path/safety_margin: 1
 
 current_position_topic: "/ground_truth_to_tf/pose"
+
+uav/laser_topic: "hokuyo_laser_scan"
