--- a/architecture/cfg/realUav_params.yaml
+++ b/architecture/cfg/realUav_params.yaml
@@ -9,12 +9,20 @@ odometry_error: 0
 
 frontier/safety_margin: 3
 
-geofence_min/x: -5
-geofence_min/y: -5
-geofence_min/z: 2
-geofence_max/x: 5
-geofence_max/y: 5
-geofence_max/z: 5
+# Fly 2
+# geofence_min/x: -17
+# geofence_min/y: -22
+# geofence_max/x: 17
+# geofence_max/y: 22
+
+# Fly 1
+geofence_min/x: -10
+geofence_min/y: -10
+geofence_max/x: 10
+geofence_max/y: 10
+
+geofence_min/z: 5
+geofence_max/z: 15
 
 path/max_search_iterations: 180
 path/max_cycles_waited_for_path: 50
