--- a/architecture/cfg/realUav_hitl_params.yaml
+++ b/architecture/cfg/realUav_hitl_params.yaml
@@ -2,7 +2,7 @@ exploration_maneuver_duration_secs: 33
 exploration_maneuver_phases_duration_secs: 10
 px4_loiter_radius: 0.5
 px4/flight_speed: 3
-offboard_enabled: false
+offboard_enabled: true
 laser_range: 6
 laser_angle: 1.0472
 
