--- a/architecture/cfg/realUav_hitl_params.yaml
+++ b/architecture/cfg/realUav_hitl_params.yaml
@@ -23,13 +23,7 @@ path/max_search_iterations: 120
 path/max_cycles_waited_for_path: 50
 path/safety_margin: 3
 
-current_position_topic: "/mavros/local_position/pose"
+current_position_topic: "/ground_truth_to_tf/pose"
 
-uav/laser_topic: "scan_filtered"
+uav/laser_topic: "hokuyo_laser_scan"
 
-scan_filter_chain:
-- name: range
-  type: LaserScanRangeFilter
-  params:
-    lower_threshold: 0.7
-    upper_threshold: 200000
