--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -68,16 +68,16 @@ if (CATKIN_ENABLE_TESTING)
   # target_link_libraries(collectResults ${catkin_LIBRARIES} )
 
   # ## Octree @ work in progress ##
-  catkin_add_gtest(workInProgress 
-    test/work_in_progress_test.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
-
-  # ## Octree @ depth and size ##depthSizeTest
-  # catkin_add_gtest(depthSizeTest 
-  #   test/depth_voxelSide_tests.cpp
+  # catkin_add_gtest(workInProgress 
+  #   test/work_in_progress_test.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(depthSizeTest ${catkin_LIBRARIES} ltStar_lib)
+  # target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
+
+  ## Octree @ depth and size ##
+  catkin_add_gtest(depthSizeTest 
+    test/depth_voxelSide_tests.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(depthSizeTest ${catkin_LIBRARIES} ltStar_lib)
 
 
   ## Lazy Theta Star @ open ##
