--- a/architecture/cfg/realUav_params.yaml
+++ b/architecture/cfg/realUav_params.yaml
@@ -16,7 +16,7 @@ scan_filter_chain:
 - name: range
   type: LaserScanRangeFilter
   params:
-    lower_threshold: 0.7
+    lower_threshold: 0.7    # Propeller distance
     upper_threshold: 200000
 
 
