--- a/path_planning/package.xml
+++ b/path_planning/package.xml
@@ -19,6 +19,7 @@
   <depend>rviz_interface</depend>
   <depend>architecture_msgs</depend>
   <depend>tf</depend>
+  <depend>tf2</depend>
 
   <!-- <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend> -->
