--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -67,11 +67,11 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(collectResults ${catkin_LIBRARIES} )
 
-  ## Octree @ work in progress ##
-  catkin_add_gtest(workInProgress 
-    test/work_in_progress_test.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
+  # ## Octree @ work in progress ##
+  # catkin_add_gtest(workInProgress 
+  #   test/work_in_progress_test.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
 
   # ## Octree @ depth and size ##
   # catkin_add_gtest(depthSizeTest 
@@ -85,6 +85,12 @@ if (CATKIN_ENABLE_TESTING)
   #   test/open_tests.cpp
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(openTests ${catkin_LIBRARIES} ltStar_lib)
+
+  # ## Obstacle Avoidance ##
+  catkin_add_gtest(obstacleAvoidanceTests 
+    test/obstacle_avoidance.cpp
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  target_link_libraries(obstacleAvoidanceTests ${catkin_LIBRARIES} ltStar_lib)
 
   # ## Lazy Theta Star ##
   # catkin_add_gtest(ltstarTests 
