[orthoPlanes] Compiling the integration. Tests failing.

--- a/path_planning/CMakeLists.txt
+++ b/path_planning/CMakeLists.txt
@@ -29,6 +29,7 @@ catkin_simple(ALL_DEPS_REQUIRED)
 ## Build ##
 ###########
 cs_add_library(ltStar_lib src/ltStar_lib.cpp)
+cs_add_library(ltStar_lib_ortho src/ltStar_lib_ortho.cpp)
 
 cs_add_executable(ltStar_async_node src/ltStar_async_node.cpp )
 target_link_libraries(ltStar_async_node  ${catkin_LIBRARIES} ltStar_lib)
@@ -67,17 +68,17 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(collectResults ${catkin_LIBRARIES} )
 
-  # ## Octree @ work in progress ##
-  # catkin_add_gtest(workInProgress 
-  #   test/work_in_progress_test.cpp
-  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  # target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib )
-
-  ## Lazy Theta Star @ orthogonal planes ##
-  catkin_add_gtest(orthogonalPlanesTests 
-    test/orthogonal_planes_tests.cpp
+  ## Octree @ work in progress ##
+  catkin_add_gtest(workInProgress 
+    test/work_in_progress_test.cpp
     WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(orthogonalPlanesTests ${catkin_LIBRARIES} ltStar_lib)
+  target_link_libraries(workInProgress ${catkin_LIBRARIES} ltStar_lib ltStar_lib_ortho)
+
+  # ## Lazy Theta Star @ orthogonal planes ##
+  # catkin_add_gtest(orthogonalPlanesTests 
+  #   test/orthogonal_planes_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(orthogonalPlanesTests ${catkin_LIBRARIES} ltStar_lib)
 
   # ## Octree @ depth and size ##
   # catkin_add_gtest(depthSizeTest 
@@ -92,15 +93,19 @@ if (CATKIN_ENABLE_TESTING)
   #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
   # target_link_libraries(openTests ${catkin_LIBRARIES} ltStar_lib)
 
-  ## Lazy Theta Star ##
-  catkin_add_gtest(ltstarTests 
-    test/lazyTheta_tests.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
-  catkin_add_gtest(ltstarTestsFixture 
-    test/lazyTheta_tests_Fixture.cpp
-    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
-  target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} ltStar_lib)
+  # ## Lazy Theta Star ##
+  # catkin_add_gtest(ltstarTests_ortho 
+  #   test/lazyTheta_tests_ortho.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTests_ortho ${catkin_LIBRARIES} ltStar_lib_ortho)
+  # catkin_add_gtest(ltstarTests 
+  #   test/lazyTheta_tests.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTests ${catkin_LIBRARIES} ltStar_lib)
+  # catkin_add_gtest(ltstarTestsFixture 
+  #   test/lazyTheta_tests_Fixture.cpp
+  #   WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/test)
+  # target_link_libraries(ltstarTestsFixture ${catkin_LIBRARIES} ltStar_lib)
 
 endif()
 
