--- a/architecture/package.xml
+++ b/architecture/package.xml
@@ -24,5 +24,6 @@
   <depend>laser_free_to_cloud</depend>
   <depend>rviz_interface</depend>
   <depend>tf</depend>
+  <depend>laser_filters</depend>
 
 </package>
