--- a/architecture/cfg/bag_hitl_params.yaml
+++ b/architecture/cfg/bag_hitl_params.yaml
@@ -35,4 +35,7 @@ scan_filter_chain:
   params:
     lower_threshold: 400
     upper_threshold: 2000
+    lower_range_threshold: 0.7
+    upper_range_threshold: 15
+    upper_replacement_value: 16
 
